--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -81,6 +81,7 @@
                 android:background="@drawable/shape_white_card"
                 android:layout_marginTop="10dp"
                 android:hint="请输入商品价格"
+                android:inputType="number"
                 android:textSize="15dp"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
@@ -172,7 +173,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/tv_food_size_title"
                     android:id="@+id/tv_food_size_tip"
-                    android:text="输入完成请按回车确认，否则无法正确上传尺码库存信息！！！"
+                    android:text="输入完成请按回车确认，否则无法正确上传口味库存信息！！！"
                     android:textSize="10dp"
                     android:textColor="@color/AppColor"
                     android:layout_marginTop="20dp"
