--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/AppBackground">
@@ -9,90 +8,111 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:text="购物车"
+        android:background="@color/AppColor"
         android:padding="15dp"
-        android:textSize="24dp"
-        android:textStyle="bold"
+        android:text="购物车"
         android:textColor="#fff"
-        android:background="@color/AppColor"/>
+        android:textSize="24dp"
+        android:textStyle="bold" />
+
     <TextView
+        android:id="@+id/tv_clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_clear"
-        android:textColor="#fff"
-        android:textSize="12dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
-        android:text="清空"/>
+        android:text="清空"
+        android:textColor="#fff"
+        android:textSize="12dp" />
+
     <ListView
         android:id="@+id/lv_shopping_cart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="50dp"
-        android:scrollbars="none"
-        android:divider="@null" />
+        android:divider="@null"
+        android:scrollbars="none" />
+
     <TextView
-        android:visibility="gone"
+        android:id="@+id/tv_tip"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/tv_tip"
-        android:text="还没登录呢，神马都没有！！！"
         android:layout_centerInParent="true"
         android:gravity="center"
+        android:text="还没登录呢，神马都没有！！！"
+        android:textColor="@color/AppColor"
         android:textSize="18dp"
-        android:textColor="@color/AppColor"/>
+        android:visibility="gone" />
+
     <RelativeLayout
         android:id="@+id/rl_pay"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="70dp"
         android:layout_alignParentBottom="true"
+        android:background="#fff"
         android:orientation="horizontal"
-        android:background="#fff">
+        android:gravity="center_vertical">
 
         <Button
             android:id="@+id/bt_commit"
-            android:text="提交订单"
-            android:textColor="#fff"
-            android:background="@drawable/shape_pay"
             android:layout_width="120dp"
-            android:layout_marginRight="20dp"
             android:layout_height="40dp"
-            android:textSize="15dp"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            />
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:background="@drawable/shape_pay"
+            android:text="创建订单"
+            android:textColor="#fff"
+            android:textSize="15dp" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_count_price"
-            android:layout_toLeftOf="@id/bt_commit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
-            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/bt_commit"
             android:text="8888"
-            android:textSize="18dp"
             android:textColor="#ff0000"
-            />
+            android:textSize="18dp" />
+
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_unit"
-            android:layout_toLeftOf="@id/tv_count_price"
-            android:layout_marginRight="5dp"
-            android:layout_centerVertical="true"
-            android:text="￥"
-            android:textSize="18dp"
-            android:textColor="#ff0000"/>
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="合计："
-            android:textSize="15dp"
-            android:textColor="#000"
-            android:layout_toLeftOf="@id/tv_unit"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="5dp"
+            android:layout_toLeftOf="@id/tv_count_price"
+            android:text="￥"
+            android:textColor="#ff0000"
+            android:textSize="18dp" />
+
+
+
+        <TextView
+            android:id="@+id/tv_sum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toLeftOf="@id/tv_unit"
+            android:text="合计："
+            android:textColor="#000"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/tv_price_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:layout_below="@id/tv_unit"
+            android:layout_alignLeft="@id/tv_sum"
+            android:text="(包含配送费5元)"
+            android:textColor="@color/line"
+            android:textSize="12dp"
+            android:layout_marginBottom="10dp"/>
     </RelativeLayout>
 </RelativeLayout>
